compiler/test/fail/non_const_macro.js
// Macro values must be held by constants
let foo = {
  content: 12,
};
